[package]
name = "ternary-interpreter"
version = "0.1.0"
edition = "2021"
description = "Ternary bytecode interpreter for GPU control flow. Balanced ternary VM with {-1,0,+1} instructions, conditional branching, and stack operations."
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-interpreter"
documentation = "https://docs.rs/ternary-interpreter"
